# min-losses-distrib-systems

./: .gitignore  Arco.cpp  Arco.h  CMakeLists.txt  Capacitor.h  Edge.cpp  Edge.h  Evolutionary_path_relinking.cpp  Evolutionary_path_relinking.h  Grafo.cpp  Grafo.h  Graph.cpp  Graph.h  Graph_network.cpp  Graph_network.h  Individual.cpp  Individual.h  Individuo.cpp  Individuo.h  LEIA ME!.txt  No.cpp  No.h  OS_Individual.cpp  OS_Individual.h  PROJETO.cbp  Path_relinking.cpp  Path_relinking.h  PlotStyle.mplstyle  README.md  RKGA.cpp  RKGA.h  RK_Individual.cpp  RK_Individual.h  Random_key.cpp  Random_keys.h  Vertex.cpp  Vertex.h  findBests.py  main.cpp  plotGraph.py  (+2 more)
ENTRADAS MODIFICADAS/: SISTEMA119s2.m  SISTEMA83_TAIWAN.m  sist33barras_Yang-modificado.m  sist33barras_Yang.m
ENTRADAS ORIGINAIS/: sist33barras_Yang.m
ENTRADAS_MODIFICADAS/: Caract_Sistem_85.m  SISTEMA83_TAIWAN.m  SISTEMA83_TAIWAN_modificado.m  sis215.m  sis33modif.m  sist135barras.m  sist33barras_Yang.m  sist69barras.m  sist69barras_capacitores.m
ENTRADAS_ORIGINAIS/: Caract_Sistem_85.m  SISTEMA119s2.m  SISTEMA83_TAIWAN.m  sist135barras.m  sist215barras.m  sist69barras.m
include/: Capacitor.h  Edge.h  Evolutionary_path_relinking.h  Graph.h  Graph_network.h  Individual.h  OS_Individual.h  RKGA.h  RK_Individual.h  Random_keys.h  Vertex.h
inputs/: SISTEMA83_TAIWAN.m
scripts/: SCRIPT_teste_AGADs.txt  SCRIPT_teste_cruzamentos.txt  run.txt  scriptTestes.txt  scriptTestes1.txt  scriptTestes2.txt  scriptTestes3.txt  scriptTestes4.txt  script_graficos2.txt  t2_100.txt  t2_150.txt  t5_100.txt  t5_150.txt  taxas.txt
source/: Edge.cpp  Evolutionary_path_relinking.cpp  Graph.cpp  Graph_network.cpp  Individual.cpp  OS_Individual.cpp  RKGA.cpp  RK_Individual.cpp  Random_keys.cpp  Vertex.cpp
teste AG puro/networks/: sis119.m
tests/: basic_tests.cpp  basic_tests.h
